# agent-workflow-evaluator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: assemble-approved-spec.yml  ci.yml
.spec-chunks/: READY  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08
docs/: .connector-file-test  IMPLEMENTATION_STATUS.md  design.md  problem-statement.md  report-format.md  risk-taxonomy.md  schema.md  v0.1-spec.md
examples/: sample-agent-workflow.yaml  sample-policy.yaml  sample-risky-workflow.yaml
src/: README.md
src/rackhead_evaluator/: __init__.py  cli.py  errors.py  models.py  parser.py  validation.py
src/rackhead_evaluator/cli/: __init__.py  main.py
src/rackhead_evaluator/errors/: __init__.py  normalize.py  types.py
src/rackhead_evaluator/models/: __init__.py  schema.py
src/rackhead_evaluator/parser/: __init__.py  yaml_loader.py
src/rackhead_evaluator/validation/: __init__.py  engine.py  referential.py  semantic.py
tests/: README.md  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_errors.py  test_models.py  test_parser.py  test_policy.py  test_validation.py
